overflow fix

--- a/app/app.css
+++ b/app/app.css
@@ -63,6 +63,7 @@
   margin: 10px;
   min-height: 120px;
   min-width: 120px;
+  overflow: hidden;
   border: 1px solid rgba(200, 200, 200, .4);
   justify-content: center;
   flex-direction: column;
